# bankingappreplica

./: CMakeLists.txt  Untitled-2.cpp  accountcreationbox.cpp  accountcreationbox.h  accountcreationbox.ui  bankingApp.db  debitcard.cpp  debitcard.h  debitcard.ui  depositmoney.cpp  depositmoney.h  depositmoney.ui  forgotpassword.cpp  forgotpassword.h  forgotpassword.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  sendmoney.cpp  sendmoney.h  sendmoney.ui
